trying to fix logo cutoff

--- a/main.scss
+++ b/main.scss
@@ -41,6 +41,10 @@ body{
   justify-content: space-between;
 }
 
+.home_slide > img:first-of-type{
+  width: 100%;
+}
+
 .home_slide > .spiral_logo{
   display: flex;
   flex-direction: column;
